change text shadow color in Day5

--- a/Challenges/Day_05/style.css
+++ b/Challenges/Day_05/style.css
@@ -11,7 +11,7 @@ h1 {
     font-family: 'Pacifico', cursive;
     text-align: center;
     font-size: 70px;
-    text-shadow: 0 4px 0 whitesmoke,
+    text-shadow: 0 4px 0 rgb(5, 163, 255),
                  0 20px 5px rgba(7, 6, 6, 0.1);
     animation: float 3s linear infinite;
     animation-direction:alternate;
